<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <TextView
        android:id="@+id/tv_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/lightGrey"
        android:padding="15dp"
        android:text="@string/name"
        android:textColor="#123"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name_label"
        android:paddingVertical="15dp"
        android:paddingStart="12dp"
        android:paddingEnd="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="Sathish Kumar" />

    <TextView
        android:id="@+id/tv_id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:background="@color/lightGrey"
        android:padding="15dp"
        android:text="@string/id"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_id_label"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        tools:text="12245 455 " />

    <TextView
        android:id="@+id/tv_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_id"
        android:background="@color/lightGrey"
        android:padding="15dp"
        android:text="@string/phoneNumber"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edit_ph_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_phone_number"
        android:autofillHints="@string/phoneNumber"
        android:backgroundTint="@color/transparent"
        android:hint="@string/enter_ph_no"
        android:inputType="number"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="15dp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="16sp"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/tv_scanned_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_ph_number"
        android:background="@color/lightGrey"
        android:padding="15dp"
        android:text="@string/scannedImage"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_id"
        android:layout_width="320dp"
        android:layout_height="200dp"
        android:layout_below="@id/tv_scanned_image"
        android:layout_centerInParent="true"
        android:contentDescription="@string/scannedImage" />

    <Button
        android:id="@+id/btnSaveAndContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:text="@string/save_and_continue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>